Bug 43335 - Driver crashes dereferencing a null pointer if it can't find lto-wrapper
Summary: Driver crashes dereferencing a null pointer if it can't find lto-wrapper
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: driver (show other bugs)
Version: 4.5.0
: P3 normal
Target Milestone: ---
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-03-11 19:25 UTC by Dmitry Gorbachev
Modified: 2010-11-22 22:02 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed:


Attachments
Patch (351 bytes, patch)
2010-03-11 19:26 UTC, Dmitry Gorbachev
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Dmitry Gorbachev 2010-03-11 19:25:37 UTC
To reproduce the bug,

[ rename temporarily the lto-wrapper program ]
$ gcc -fuse-linker-plugin something.c
Segmentation fault
Comment 1 Dmitry Gorbachev 2010-03-11 19:26:16 UTC
Created attachment 20086 [details]
Patch

I use this patch.
Comment 2 Joseph S. Myers 2010-11-22 21:18:18 UTC
Author: jsm28
Date: Mon Nov 22 21:18:15 2010
New Revision: 167052

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=167052
Log:
2010-11-22  Dmitry Gorbachev  <d.g.gorbachev@gmail.com>

	PR driver/43335
	* gcc.c (main): Don't crash when lto-wrapper program is not found.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/gcc.c
Comment 3 Dmitry Gorbachev 2010-11-22 22:02:41 UTC
.