2010-11-22  Dmitry Gorbachev  <d.g.gorbachev@gmail.com>

PR driver/43335
	* gcc.c (main): Don't crash when lto-wrapper program is not found.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@167052 138bc75d-0d04-0410-961f-82ee72b054a4